--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     </div>
 
 
-    <div id="product-edit-modal" class="modal"> <div class="modal-content w-[95%] max-w-[1600px] p-8 mx-auto bg-slate-800 rounded-lg shadow-xl text-white relative"> <button id="product-modal-close-button" class="modal-close-button">
+    <div id="product-edit-modal" class="modal"> <div class="modal-content w-[95%] max-w-[1600px] max-h-[90vh] overflow-y-auto p-8 mx-auto bg-slate-800 rounded-lg shadow-xl text-white relative"> <button id="product-modal-close-button" class="modal-close-button">
                 <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
             </button>
             <h3 class="text-2xl font-semibold mb-6 text-white" id="product-modal-title">Add Product</h3>
