--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                             <div>
                                 <label class="block text-sm font-medium text-gray-300 mb-1">Tag/Border Color</label>
                                 <div class="grid grid-cols-1 @[600px]:grid-cols-2 gap-2">
-                                    <select id="product-edit-tagColor" class="admin-input-field">
+                                    <select id="product-edit-tagColor" class="admin-input-field">\
                                     <option value="gray">Gray</option>
                                     <option value="orange">Orange</option>
                                     <option value="blue">Blue</option>
