--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shillette</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/fonts.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
     <link id="favicon" rel="icon" type="image/png" href="/assets/images/icon.png">
-    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body class="min-h-screen flex flex-col">
     <div id="snow-container"></div>
