--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
     </div>
 
-    <header class="py-4 sticky top-0 z-40 bg-gray-900/80 backdrop-blur-md border-b border-gray-700/50">
+    <header class="py-4 sticky top-0 z-40 bg-transparent backdrop-blur-md border-b border-gray-700/50">
         <div class="container mx-auto px-6 flex justify-between items-center">
             <div class="flex items-center space-x-2">
                 <img id="header-site-icon" src="/assets/images/icon.png" alt="Site Icon" class="w-8 h-8">
@@ -53,10 +53,10 @@
         <!-- Main content sections -->
         <section class="relative text-center py-24 md:py-32 lg:py-40 overflow-hidden">
             <div class="container mx-auto px-6 relative z-10">
-                <h1 class="text-4xl md:text-5xl lg:text-6xl font-extrabold text-white mb-4">Shillette</h1>
-                <p class="text-xl md:text-2xl text-orange-400 mb-6 font-medium">Advanced DMA Firmware</p>
-                <p class="max-w-2xl mx-auto text-gray-400 mb-10">
-                    Fully undetected DMA firmware, battle-tested for reliable performance. Join thousands of satisfied users.
+                <h1 class="text-4xl md:text-5xl lg:text-6xl font-extrabold text-white mb-4">Advanced DMA Firmware</h1>
+                <p class="text-xl md:text-2xl text-orange-400 mb-6 font-medium">Fully undetected DMA firmware, battle-tested for reliable performance.</p>
+                <p class="max-w-2xl mx-auto text-gray-300 mb-10">
+                    Join thousands of satisfied users and experience the power of our cutting-edge DMA firmware solutions.
                 </p>
                 <div class="flex flex-col sm:flex-row justify-center items-center space-y-4 sm:space-y-0 sm:space-x-4 mb-16">
                     <a href="/products" id="purchase-button" class="bg-orange-600 hover:bg-orange-700 text-white font-semibold py-3 px-8 rounded-lg transition duration-300 shadow-lg w-full sm:w-auto">
@@ -69,7 +69,7 @@
                         <span>Join Discord</span>
                     </a>
                 </div>
-                <div class="grid grid-cols-2 sm:grid-cols-4 gap-8 max-w-3xl mx-auto text-gray-400">
+                <div class="grid grid-cols-2 sm:grid-cols-4 gap-8 max-w-3xl mx-auto text-gray-300">
                     <div class="text-center">
                         <div class="text-3xl font-bold text-white mb-1">1000+</div>
                         <div>Happy Users</div>
@@ -91,7 +91,7 @@
         </section>
     </main>
 
-    <footer class="bg-black mt-auto py-6 border-t border-gray-800">
+    <footer class="bg-transparent mt-auto py-6 border-t border-gray-800">
         <div class="container mx-auto px-6 text-center text-gray-500 text-sm">
             <p>&copy; <span id="footer-year">2025</span> Shillette. All rights reserved.</p>
         </div>
